--- a/static/ikwen/css/uploader-single.css
+++ b/static/ikwen/css/uploader-single.css
@@ -12,7 +12,8 @@
 #upload-container .image .progress, .upload-container .image .progress {float: left; background: #3C63FF; height: 10px; margin-top: 213px}
 #upload-container .image .spinner, .upload-container .image .spinner {margin-top: 90px}
 #upload-container .uploader, .upload-container .uploader {display: none;height: 225px;position: absolute;text-align: center;width: 280px;}
-#upload-container .image:hover .uploader, .upload-container .image:hover .uploader {display: block}
+.upload-container .full-view {background: rgba(0, 0, 0, .7);border-radius: 3px;display: none;color: #ddd;font-size: 18px;height: 30px;margin: 190px 0 0 5px;padding: 2px 5px;position: absolute;}
+#upload-container .image:hover .uploader, .upload-container .image:hover .uploader, .upload-container .image:hover .full-view {display: block}
 .qq-uploader {background: rgba(0, 0, 0, .7); height: 40px; padding-top: 8px}
 .qq-upload-button {background: none; border: none; box-shadow: none; color: #fff; text-shadow: none; height: 100px; width: 100%}
 .qq-upload-button-hover {box-shadow: none; color: #fff}
