--- a/static/ikwen/css/dashboard.css
+++ b/static/ikwen/css/dashboard.css
@@ -155,12 +155,16 @@
 }
 @media (max-width: 767px) {
     .watch.last-week, .watch.last-28-days {margin-top: 25px}
+    .show-details {font-size: 15px}
     #admin-content em.balance {font-size: 24px}
     #admin-content em.last-payment {font-size: 21px}
     .payments .view-payments {margin-top: 5px}
-    .section-title {border-top: 1px solid #ddd;padding-top: 10px;margin-top: 25px;margin-bottom: 15px;}
+    .section-title {border-top: 1px solid #ddd;padding-top: 10px;margin-top: 25px;margin-bottom: 15px;font-size: 16px;float: left;width: 100%;}
     .section-title.performances {margin: 25px 0;}
+    .performances .th {font-size: 15px}
+    .ranking li {padding: 10px 5px;height: 42px;}
     .figure, .figure-lg {text-align: center}
+    .payments > div h6, .payments > div a {font-size: 15px}
 }
 @media (min-width: 992px) {
     #admin-content {padding-left: 270px;}
