--- a/static/ikwen/css/dashboard.css
+++ b/static/ikwen/css/dashboard.css
@@ -24,7 +24,7 @@
     font-size: 34px
 }
 
-.section-title {clear: both; font-size: 15px}
+.section-title {clear: both;font-size: 15px;float: left;width: 100%;}
 #admin-content em.last-payment {color: #555; display: block; font-size: 25px; width: 100%}
 .view-payments {float: left; width: auto}
 .figure-lg {font-size: 75px;line-height: 135px;}
@@ -159,7 +159,7 @@
     #admin-content em.balance {font-size: 24px}
     #admin-content em.last-payment {font-size: 21px}
     .payments .view-payments {margin-top: 5px}
-    .section-title {border-top: 1px solid #ddd;padding-top: 10px;margin-top: 25px;margin-bottom: 15px;font-size: 16px;float: left;width: 100%;}
+    .section-title {border-top: 1px solid #ddd;padding-top: 10px;margin-top: 25px;margin-bottom: 15px;font-size: 16px;}
     .section-title.performances {margin: 25px 0;}
     .performances .th {font-size: 15px}
     .ranking li {padding: 10px 5px;height: 42px;}
