-sm widgets replaced by -md widgets

--- a/accesscontrol/templates/accesscontrol/account.html
+++ b/accesscontrol/templates/accesscontrol/account.html
@@ -39,7 +39,7 @@
 
 {% block content %}
     <div id="content" class="container">
-        <h4 class="content-title" style="padding: 0 15px">{% trans "Account Setup" %}</h4>
+        <h2 class="content-title" style="font-weight: 600; padding: 0 15px">{% trans "Account Setup" %}</h2>
         <div id="stage">
             <div class="col-md-6 card-xs">
                 <section class="identity">
