--- a/accesscontrol/templates/accesscontrol/sign_in.html
+++ b/accesscontrol/templates/accesscontrol/sign_in.html
@@ -39,18 +39,18 @@
             <form action="{% url 'ikwen:sign_in' %}?{{ request.META.QUERY_STRING }}" method="post">{% csrf_token %}
                 <div class="form-group" style="margin-top: .4em">
                     <label for="lg-username">{% trans "Username or email" %}</label>
-                    <input id="lg-username" class="form-control input-sm username" type="text" name="username" autofocus
+                    <input id="lg-username" class="form-control input-md username" type="text" name="username" autofocus
                            value="{{ request.GET.username }}{{ request.GET.phone }}" /> {#Only username or phone will be output depending on what is available#}
                 </div>
                 <div class="form-group">
                     <label for="lg-password">{% trans "Password" %}</label>
-                    <input id="lg-password" class="form-control input-sm password" type="password" name="password" />
+                    <input id="lg-password" class="form-control input-md password" type="password" name="password" />
                 </div>
                 <div class="form-group">
                     {% if settings.IS_UMBRELLA %}
-                        <button class="btn btn-primary btn-block btn-sm"> {% trans "Submit" %} </button>
+                        <button class="btn btn-primary btn-block btn-md"> {% trans "Submit" %} </button>
                     {% else %}
-                        <button class="btn btn-primary btn-block btn-sm login-with-ikwen">
+                        <button class="btn btn-primary btn-block btn-md login-with-ikwen">
                             {% blocktrans %}Login with <strong>ikwen</strong>{% endblocktrans %}
                         </button>
                     {% endif %}
