--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -62,6 +62,11 @@ body {color: #464646;}
   -webkit-animation: dash 1.5s ease-in-out infinite;
   animation: dash 1.5s ease-in-out infinite;
 }
+
+.btn .spinner-container .path {stroke: rgba(162, 162, 162, 0.85);}
+.btn.processing, .btn.processing:hover, .btn.processing:hover:active {background: #ddd;border-color: #9e9e9e;color: #777777;min-width: 170px;transition: all .3s;}
+.btn:not(.processing) .spinner {display: none; transition: all .3s}
+.btn.processing .spinner {display: block;position: absolute;top: 18px;}
 @keyframes rotate {
     100% { transform: rotate(360deg); }
 }
@@ -178,7 +183,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     width: 96%;
     z-index: 1001;
 }
-#navbar-search .hide-search {color: #bbb;float: left;font-size: 24px;margin-top: 13px;}
+#navbar-search .hide-search {color: #bbb;float: left;font-size: 24px;margin-top: 10px;}
 #navbar-search input {background: none;border: none;float: right;width: 88%;}
 
 #navbar-results {clear: both}
@@ -259,6 +264,12 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .btn-outline-white {background-color: transparent;background-image: none;border-color: #fff;color: #fff;}
 .btn-outline-white:hover {background-color: #fff; border-color: #fff; color: #01244F}
 .btn-outline-success:focus, .btn-outline-success.focus {box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5)}
+.btn-outline-grey {background-color: transparent;background-image: none;border-color: #ddd}
+.btn-outline-grey:hover {background-color: #f5f5f5;color: #464646;}
+.btn-outline-grey:hover:active {background-color: #eee;color: #464646}
+.btn-green {color: #fff;background: #2cb100;border-color: #2cb100;font-weight: 700;}
+.btn-green:hover {color: #fff;background: #30bf00;border-color: #30bf00;}
+.btn-green:hover:active {color: #fff;background: #28a200;border-color: #28a200;}
 
 @media (max-width: 767px) {
     input[type="radio"], input[type="checkbox"] {float: left;height: 18px;margin-top: 1px;width: 18px;}
@@ -308,6 +319,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     .ik-li .date {position: absolute; right: 6px}
 }
 @media (min-width: 768px) {
+    .btn.processing .spinner {top: 6px;}
     .modal .actions {margin-top: 2em}
     #content {padding-top: 75px; min-height: 450px}
     .form-wrapper {width: 360px}
