'unload' event captured to clear the transactionId from cookies

--- a/billing/templates/billing/momo_checkout.html
+++ b/billing/templates/billing/momo_checkout.html
@@ -137,6 +137,9 @@
                 (e || window.event).returnValue = confirmation; //Gecko + IE
                 return confirmation; //Gecko + Webkit, Safari, Chrome etc.
             });
+            window.addEventListener("unload", function (e) {
+                if (ikwen.CookieUtil.get('txId')) ikwen.CookieUtil.unset('txId')
+            });
         })()
     </script>
     {{ config.scripts|safe }}
