--- a/billing/templates/billing/payment_list.html
+++ b/billing/templates/billing/payment_list.html
@@ -14,7 +14,7 @@
     <div id="admin-content">
         <div class="container-fluid stage">
             {% include 'core/snippets/admin_tools.html' %}
-            <div class="col-lg-10 col-lg-offset-1" style="margin-top: 6vh">
+            <div class="col-lg-10 col-lg-offset-1" style="margin: 6vh -15px">
                 <div id="results" style="padding-top: 0">
                     {% include html_results_template_name %}
                 </div>
