--- a/billing/templates/billing/snippets/payment_list_results.html
+++ b/billing/templates/billing/snippets/payment_list_results.html
@@ -45,7 +45,10 @@
             <li class="ik-li list-group-item" id="{{ payment.id }}" data-id="{{ payment.id }}">
                 <a href="{{ obj_url }}">{{ subscription }}</a>
                 <div>
-                    <span class="pull-left text-muted">{{ payment.invoice }} - {{ payment.created_on|date }}</span>
+                    <span class="pull-left text-muted hidden-xs">{{ payment.invoice }} - {{ payment.created_on|date }}</span>
+                    <span class="pull-left text-muted visible-xs">
+                        {{ payment.invoice.number }} - {{ payment.created_on|date:"Y-m-d" }}
+                    </span>
                     <span class="pull-right">
                         <span class="text-muted" style="font-size: .8em">{{ currency_symbol }}</span>
                         <strong>{{ payment.amount|intcomma }}</strong>
