--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         {% block meta %}
-            {% include 'core/snippets/favicon.html' %}
+            {% include 'core/snippets/color_and_icons.html' %}
         {% endblock %}
 		{% block page_title %}{% endblock %}
         {% block head_style %}
