--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block meta %}
-            {% include 'core/snippets/favicon.html' %}
+            {% include 'core/snippets/color_and_icons.html' %}
         {% endblock %}
 		{% block page_title %}{% endblock %}
 		{% block head_style %}
@@ -75,9 +75,9 @@
                                                         <i class="glyphicon glyphicon-bell" aria-hidden="true"></i>
                                                         {% if user.get_notice_count > 0 %}
                                                             {% if user.get_notice_count >= 100 %}
-                                                                <span class="label label-danger">{{ user.get_notice_count }}</span>
-                                                            {% else %}
                                                                 <span class="label label-danger">99+</span>
+                                                            {% else %}
+                                                                <span class="label label-danger">{{ user.get_notice_count }}</span>
                                                             {% endif %}
                                                         {% endif %}
                                                     </a>
@@ -160,9 +160,9 @@
                                                     <i class="glyphicon glyphicon-bell"></i>
                                                     {% if user.get_notice_count > 0 %}
                                                         {% if user.get_notice_count >= 100 %}
-                                                            <span class="label label-danger" style="margin-top: -18px">{{ user.get_notice_count }}</span>
-                                                        {% else %}
                                                             <span class="label label-danger" style="margin-top: -18px">99+</span>
+                                                        {% else %}
+                                                            <span class="label label-danger" style="margin-top: -18px">{{ user.get_notice_count }}</span>
                                                         {% endif %}
                                                     {% endif %}
                                                 </a>
