1 - MoMoTransaction objects and callbacks manipulated within transaction.atomic() block 2 - Cancel button on momo_checkout.html redirects to cancel_url when set in session

--- a/billing/templates/billing/momo_checkout.html
+++ b/billing/templates/billing/momo_checkout.html
@@ -46,7 +46,8 @@
             </form>
         </div>
         <div style="margin: 45px 15px">
-            <a href="{{ request.META.HTTP_REFERER }}" class="cancel-payment">{% trans "Cancel" %}</a>
+            <a href="{% if request.session.cancel_url %}{{ request.session.cancel_url }}{% else %}{{ request.META.HTTP_REFERER }}{% endif %}"
+               class="cancel-payment">{% trans "Cancel" %}</a>
         </div>
         <div class="clear"></div>
     </div>
