--- a/static/ikwen/css/admin.css
+++ b/static/ikwen/css/admin.css
@@ -14,7 +14,7 @@
 /*@import url('https://fonts.googleapis.com/css?family=Asap:400,700');*/
 /*@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,700');*/
 
-body {font-size: 13px;overflow: hidden;}
+body {font-size: 14px;overflow: hidden;}
 .glyphicon.toggle.on {color: #ccc}
 .glyphicon.toggle.off {color: #33c800}
 .verify {border: 1px solid #e74c3c} /* Highlights form errors (Check performed by javascript) */
@@ -59,7 +59,7 @@ div#container.admin {padding-top: 110px;transition: all .2s;}
     width: 90%;
     top: 0;
     z-index: 1;
-    }
+}
 #admin-nav::-webkit-scrollbar {width: 0 !important;}
 #admin-nav > div > div {padding: 0 10px;}
 #admin-nav .wrapper {padding: 20px 0 90px;}
@@ -91,7 +91,7 @@ div#container.admin {padding-top: 110px;transition: all .2s;}
 #admin-content.change-form h3:first-of-type {margin-top: 0}
 
 #admin-tools {background: #fff;clear: both;padding: 0 15px;position: fixed;width: 100%;z-index: 11}
-#admin-tools input, #admin-tools select {border: 1px solid #ddd;font-size: 13px;padding-left: 40px;}
+#admin-tools input, #admin-tools select {border: 1px solid #ddd;font-size: 14px;padding-left: 40px;}
 #admin-tools select {padding-left: 25px;}
 #admin-tools select:not(:first-of-type) {padding-left: 0}
 #admin-tools .btn.action .glyphicon, #admin-tools .btn.action .fa {float: left;margin: 1px 10px 0 0;}
@@ -176,6 +176,9 @@ footer a {color: #999}
 .checkbox.tile {margin: 0 0 10px}
 .tiles.object-list {margin-top: 20px}
 .object-list .list-group-item:first-of-type {border-top: none}
+.empty-list {background: #fafafa; border-radius: 4px; border: 3px dashed #ddd; margin: 10vh auto 0; padding: 10vh; text-align: center}
+.empty-list .notice {margin-bottom: 4vh;}
+.empty-list .btn {min-width: 200px}
 #results {clear: both}
 #admin-tools + #results {margin-top: 45px;}
 .content-tab-list {position: fixed;width: 100%;z-index: 10;}
@@ -292,7 +295,7 @@ footer a {color: #999}
 @media (min-width: 1200px) {
     .member .info, .ik-li .info {margin-left: 15px}
     #admin-content .has-edge-panel-right .member .info, #admin-content .has-edge-panel-right .ik-li .info {max-width: 600px;}
-    #stage {width: 820px}
+    #stage {width: 820px;}
     #stage .tiles .ik-li {width: 33.33%}
 }
 
