--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -31,7 +31,7 @@ body {color: #464646;}
 }
 .actions .fa, .fa.action, .actions .fas, .fas.action {font-size: 18px}
 .modal .actions {clear: both}
-.cta {font-family: "PT Sans", Lato, sans-serif;font-weight: 700;letter-spacing: 0.5px}
+.cta {font-family: "PT Sans", Lato, sans-serif;font-weight: 700;letter-spacing: 0.5px;}
 .stretched {height: 100%; width: 100%}
 .errorlist {color: #e74c3c}
 .input-error {border-color: #e74c3c}
@@ -64,9 +64,9 @@ body {color: #464646;}
 }
 
 .btn .spinner-container .path {stroke: rgba(162, 162, 162, 0.85);}
-.btn.processing, .btn.processing:hover, .btn.processing:hover:active {background: #ddd;border-color: #9e9e9e;color: #777777;min-width: 170px;transition: all .3s;}
+.btn.processing, .btn.processing:hover, .btn.processing:hover:active {background: #ddd;border-color: #9e9e9e;color: #777777;min-width: 170px;position: relative;transition: all .3s;}
 .btn:not(.processing) .spinner {display: none; transition: all .3s}
-.btn.processing .spinner {display: block;position: absolute;top: 18px;}
+.btn.processing .spinner {display: block;position: absolute;top: 4px;}
 @keyframes rotate {
     100% { transform: rotate(360deg); }
 }
@@ -156,7 +156,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .text-has-shade {text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)}
 .inner-shade {box-shadow: inset 0 1px 3px rgba(0, 0, 0, .15);}
 .subtle-shade {box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .15);}
-#navbar {height: 55px;min-height: 50px;position: fixed;width: 100%;transition: all .2s;}
+#navbar {height: 55px;min-height: 50px;position: fixed;top: 0;width: 100%;transition: all .2s;}
 .menu-button {float: left;padding: 20px 15px 0 20px;}
 .icon-bar {
     background: #fff;
@@ -271,6 +271,10 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .btn-green:hover {color: #fff;background: #30bf00;border-color: #30bf00;}
 .btn-green:hover:active {color: #fff;background: #28a200;border-color: #28a200;}
 
+.btn-deep-blue {color: #fff;background: #007bff;border-color: #007bff;font-weight: 700;}
+.btn-deep-blue:hover {background: #006ee4;border-color: #007bff;}
+.btn-deep-blue:hover:active {background: #006ee4;border-color: #007bff;}
+
 footer {color: #999;font-size: 12px;text-align: center;margin: 30px;}
 .edge-panel-left footer {margin-top: 0}
 footer a {color: #999}
@@ -342,7 +346,6 @@ footer .company-name {color: #666; text-decoration: none}
     .ik-li .date {position: absolute; right: 6px}
 }
 @media (min-width: 768px) {
-    .btn.processing .spinner {top: 6px;}
     .modal .actions {margin-top: 2em}
     #content {padding-top: 75px; min-height: 450px}
     .form-wrapper {width: 360px}
